# union-policy-parser

./: ECOSYSTEM.scm  README.adoc  ROADMAP.adoc  ROADMAP.md  STATE.scm
.github/workflows/: codeql.yml  k9-validation.yml  mirror.yml  scorecard.yml  validate-contracts.yml
.machine_readable/: AGENTIC.scm  ECOSYSTEM.scm  META.scm  NEUROSYM.scm  PLAYBOOK.scm  STATE.scm
Documentation/: ARCHITECTURE.adoc  QUICKSTART.adoc  SESSION-SUMMARY.adoc
examples/: academic-lecturer-contract.a2ml  freelance-journalist-bad.a2ml  freelance-journalist-good.a2ml  ou-day-employee-contract.a2ml
k9/: employment-contract.k9.ncl  freelance-journalist-contract.k9.ncl  nuj-editorial-policy.k9.ncl
schemas/: bectu-media-rights.a2ml  equity-performers-rights.a2ml  gmb-general-workers-rights.a2ml  iww-freelancer-rights.a2ml  nuj-code-of-ethics.a2ml  nuj-pr-comms-guidance.a2ml  ucu-academic-standards.a2ml
src/rust/: Cargo.toml
src/rust/src/: error.rs  main.rs  parser.rs  reporter.rs  schemas.rs  validator.rs
