# SPDX-License-Identifier: PMPL-1.0-or-later

[package]
name = "union-policy-parser"
version = "0.1.0"
authors = ["Jonathan D.A. Jewell <jonathan.jewell@open.ac.uk>"]
edition = "2021"
license = "PMPL-1.0-or-later"
description = "Policy validation engine for union contracts (NUJ, IWW, UCU) using A2ML"
repository = "https://github.com/hyperpolymath/union-policy-parser"
keywords = ["union", "labor", "contracts", "a2ml", "policy"]
categories = ["command-line-utilities", "text-processing"]

[dependencies]
# CLI framework
clap = { version = "4.5", features = ["derive", "env", "cargo"] }

# Parsing
nom = "7.1"  # Parser combinators for A2ML
nom_locate = "4.2"  # Source location tracking

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Text processing
regex = "1.10"
aho-corasick = "1.1"  # Fast multi-pattern matching
lazy_static = "1.4"  # Static regex compilation

# File I/O
walkdir = "2.5"
ignore = "0.4"  # Respect .gitignore

# Checksums
sha2 = "0.10"
hex = "0.4"

# Date/time for grievance generation
chrono = "0.4"

# Optional: PDF parsing (for pdf-to-a2ml)
# pdf-extract = { version = "0.7", optional = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[features]
default = []
pdf = []  # Enable PDF parsing

[[bin]]
name = "union-policy-parser"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
